[gd_scene load_steps=22 format=4 uid="uid://dc8bfyn7m5ngj"]

[ext_resource type="Script" uid="uid://bnbf2k12f54g1" path="res://script/snake.gd" id="1_kcius"]
[ext_resource type="Texture2D" uid="uid://bl1rtd1mdkmft" path="res://asset/sprite/tinyRPG_dragonRegaliaGUI_v1_0/20240707dragon9SlicesB.png" id="2_w1t6s"]
[ext_resource type="Texture2D" uid="uid://bkbce0vqdxf12" path="res://asset/sprite/tinyRPG_manaSoulGUI_v_1_0/20250420manaSoulHeaderA-Sheet.png" id="5_2n73v"]
[ext_resource type="Texture2D" uid="uid://bq541wfctmvcb" path="res://asset/sprite/tinyRPG_manaSoulGUI_v_1_0/20250420manaTabB-Sheet.png" id="6_ygplv"]
[ext_resource type="Texture2D" uid="uid://cdt7cpglibtql" path="res://asset/sprite/tinyRPG_manaSoulGUI_v_1_0/20250420manaSoul9SlicesB-Sheet.png" id="7_rhn4u"]
[ext_resource type="Texture2D" uid="uid://dhawkfn61ogbw" path="res://asset/sprite/tinyRPG_manaSoulGUI_v_1_0/20250425rightArrow-Sheet.png" id="8_fsxo8"]
[ext_resource type="TileSet" uid="uid://canr2c7puh78g" path="res://asset/tileset/dungeon_tileset.tres" id="9_rxj55"]
[ext_resource type="FontFile" uid="uid://dhvwmgcsmbfsf" path="res://asset/font/Everyday_Tiny_Blocky.ttf" id="10_xuaa6"]
[ext_resource type="Texture2D" uid="uid://dp783qu7ogqqf" path="res://asset/sprite/tinyRPG_manaSoulGUI_v_1_0/20250420manaSoul9SlicesE-Sheet.png" id="11_sv16n"]
[ext_resource type="FontFile" uid="uid://bfd8lxmo20ddl" path="res://asset/font/Everyday_Tiny_Bold.ttf" id="12_50l43"]
[ext_resource type="Texture2D" uid="uid://c64xaf1301xum" path="res://asset/sprite/tinyRPG_dragonRegaliaGUI_v1_0/20240707dragon9SlicesC.png" id="13_10lva"]
[ext_resource type="Texture2D" uid="uid://c13x2xqwox3y7" path="res://asset/sprite/tinyRPG_manaSoulGUI_v_1_0/20250420manaSoulHeaderB-Sheet.png" id="14_u7uge"]
[ext_resource type="Theme" uid="uid://dqa4pio1y4yi4" path="res://asset/customize_button.tres" id="15_rsen0"]
[ext_resource type="Texture2D" uid="uid://chvlj0aa3r1oi" path="res://asset/sprite/tinyRPG_manaSoulGUI_v_1_0/20250425exitButton-Sheet.png" id="16_y283d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7ar3o"]
atlas = ExtResource("6_ygplv")
region = Rect2(62, 0, 31, 42)

[sub_resource type="AtlasTexture" id="AtlasTexture_jylcv"]
atlas = ExtResource("7_rhn4u")
region = Rect2(1, 1, 95, 95)

[sub_resource type="AtlasTexture" id="AtlasTexture_aw5hm"]
atlas = ExtResource("5_2n73v")

[sub_resource type="AtlasTexture" id="AtlasTexture_032wp"]
atlas = ExtResource("8_fsxo8")
region = Rect2(0, 0, 19, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2xis"]
atlas = ExtResource("11_sv16n")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2jy88"]
texture = SubResource("AtlasTexture_i2xis")
texture_margin_left = 30.0
texture_margin_top = 31.0
texture_margin_right = 30.0
texture_margin_bottom = 30.0
region_rect = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bi24v"]
atlas = ExtResource("16_y283d")
region = Rect2(0, 0, 30, 32)

[node name="Snake" type="Node2D"]
script = ExtResource("1_kcius")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
z_index = 999
custom_minimum_size = Vector2(540, 360)
offset_right = 540.0
offset_bottom = 360.0
mouse_filter = 2

[node name="Node2D" type="Node2D" parent="."]
visible = false
position = Vector2(230, 59)

[node name="NinePatchRect4" type="NinePatchRect" parent="Node2D"]
z_index = 10
offset_right = 295.0
offset_bottom = 274.0
texture = ExtResource("2_w1t6s")
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 25

[node name="NinePatchRect9" type="NinePatchRect" parent="Node2D"]
z_index = 10
offset_left = 35.0
offset_top = 264.0
offset_right = 122.0
offset_bottom = 298.0
texture = SubResource("AtlasTexture_7ar3o")
region_rect = Rect2(0, 0, 31, 42)
patch_margin_left = 20
patch_margin_top = 24
patch_margin_right = 13
patch_margin_bottom = 10

[node name="NinePatchRect10" type="NinePatchRect" parent="Node2D"]
z_index = 10
offset_left = -217.0
offset_top = 6.0
offset_right = -25.0
offset_bottom = 262.0
texture = SubResource("AtlasTexture_jylcv")
region_rect = Rect2(0, 0, 95, 95)
patch_margin_left = 29
patch_margin_top = 29
patch_margin_right = 30
patch_margin_bottom = 30

[node name="NinePatchRect11" type="NinePatchRect" parent="Node2D"]
z_index = 10
offset_left = -216.0
offset_top = -46.0
offset_right = 301.0
offset_bottom = -9.0
texture = SubResource("AtlasTexture_aw5hm")
region_rect = Rect2(0, 0, 96, 33)
patch_margin_left = 29
patch_margin_top = 16
patch_margin_right = 30
patch_margin_bottom = 21

[node name="TextureRect" type="TextureRect" parent="Node2D"]
z_index = 50
offset_left = -35.0
offset_top = 32.0
offset_right = -16.0
offset_bottom = 46.0
texture = SubResource("AtlasTexture_032wp")
stretch_mode = 2

[node name="background" type="TileMapLayer" parent="."]
visible = false
tile_map_data = PackedByteArray("AAACAAIAAAAmABkAAAACAAMAAAAmABsAAAACAAQAAAAnABoAAAACAAUAAAAmABsAAAACAAYAAAAlABoAAAACAAcAAAAlABoAAAACAAgAAAAmABkAAAACAAkAAAAnABoAAAACAAoAAAAlABoAAAACAAsAAAAnABoAAAACAAwAAAAnABoAAAACAA0AAAAmABsAAAACAA4AAAAmABsAAAACAA8AAAAmABoAAAACABAAAAAmABkAAAACABEAAAAnABoAAAADAAIAAAAnABoAAAADAAMAAAAmABkAAAADAAQAAAAmABkAAAADAAUAAAAlABoAAAADAAYAAAAmABkAAAADAAcAAAAnABoAAAADAAgAAAAnABoAAAADAAkAAAAkABgAAAADAAoAAAAmABkAAAADAAsAAAAnABoAAAADAAwAAAAlABoAAAADAA0AAAAmABsAAAADAA4AAAAlABoAAAADAA8AAAAmABkAAAADABAAAAAmABsAAAADABEAAAAmABsAAAAEAAIAAAAlABoAAAAEAAMAAAAnABoAAAAEAAQAAAAnABoAAAAEAAUAAAAlABoAAAAEAAYAAAAkABgAAAAEAAcAAAAnABoAAAAEAAgAAAAmABsAAAAEAAkAAAAmABsAAAAEAAoAAAAmABoAAAAEAAsAAAAnABoAAAAEAAwAAAAnABoAAAAEAA0AAAAmABoAAAAEAA4AAAAmABsAAAAEAA8AAAAmABoAAAAEABAAAAAkABgAAAAEABEAAAAkABgAAAAFAAIAAAAmABkAAAAFAAMAAAAkABgAAAAFAAQAAAAmABoAAAAFAAUAAAAmABkAAAAFAAYAAAAnABoAAAAFAAcAAAAmABsAAAAFAAgAAAAmABoAAAAFAAkAAAAnABoAAAAFAAoAAAAmABsAAAAFAAsAAAAmABkAAAAFAAwAAAAlABoAAAAFAA0AAAAmABsAAAAFAA4AAAAmABkAAAAFAA8AAAAmABoAAAAFABAAAAAmABsAAAAFABEAAAAlABoAAAAGAAIAAAAlABoAAAAGAAMAAAAkABgAAAAGAAQAAAAmABkAAAAGAAUAAAAmABkAAAAGAAYAAAAmABkAAAAGAAcAAAAlABoAAAAGAAgAAAAmABsAAAAGAAkAAAAmABoAAAAGAAoAAAAnABoAAAAGAAsAAAAmABkAAAAGAAwAAAAmABsAAAAGAA0AAAAmABkAAAAGAA4AAAAmABsAAAAGAA8AAAAmABoAAAAGABAAAAAmABsAAAAGABEAAAAkABgAAAAHAAIAAAAmABoAAAAHAAMAAAAnABoAAAAHAAQAAAAkABgAAAAHAAUAAAAmABsAAAAHAAYAAAAkABgAAAAHAAcAAAAmABsAAAAHAAgAAAAkABgAAAAHAAkAAAAnABoAAAAHAAoAAAAnABoAAAAHAAsAAAAkABgAAAAHAAwAAAAlABoAAAAHAA0AAAAmABoAAAAHAA4AAAAlABoAAAAHAA8AAAAmABsAAAAHABAAAAAmABkAAAAHABEAAAAkABgAAAAIAAIAAAAmABkAAAAIAAMAAAAmABkAAAAIAAQAAAAmABoAAAAIAAUAAAAnABoAAAAIAAYAAAAnABoAAAAIAAcAAAAnABoAAAAIAAgAAAAnABoAAAAIAAkAAAAmABoAAAAIAAoAAAAkABgAAAAIAAsAAAAnABoAAAAIAAwAAAAnABoAAAAIAA0AAAAlABoAAAAIAA4AAAAmABoAAAAIAA8AAAAmABsAAAAIABAAAAAmABkAAAAIABEAAAAlABoAAAAJAAIAAAAnABoAAAAJAAMAAAAmABkAAAAJAAQAAAAmABoAAAAJAAUAAAAmABkAAAAJAAYAAAAmABsAAAAJAAcAAAAmABkAAAAJAAgAAAAkABgAAAAJAAkAAAAlABoAAAAJAAoAAAAmABsAAAAJAAsAAAAmABkAAAAJAAwAAAAlABoAAAAJAA0AAAAmABsAAAAJAA4AAAAkABgAAAAJAA8AAAAmABsAAAAJABAAAAAnABoAAAAJABEAAAAlABoAAAAMAAEAAAAnABoAAAAMAAIAAAAmABkAAAAMAAMAAAAmABoAAAAMAAQAAAAnABoAAAAMAAUAAAAnABoAAAANAAEAAAAmABoAAAANAAIAAAAmABoAAAANAAMAAAAmABsAAAANAAQAAAAkABgAAAANAAUAAAAmABoAAAAOAAEAAAAkABgAAAAOAAIAAAAlABoAAAAOAAMAAAAmABsAAAAOAAQAAAAnABoAAAAOAAUAAAAmABoAAAAPAAEAAAAlABoAAAAPAAIAAAAnABoAAAAPAAMAAAAnABoAAAAPAAQAAAAmABkAAAAPAAUAAAAlABoAAAARAAEAAAAlABoAAAARAAIAAAAmABoAAAARAAMAAAAnABoAAAARAAQAAAAnABoAAAARAAUAAAAnABoAAAAQAAEAAAAmABsAAAAQAAUAAAAmABoAAAAQAAIAAAAlABoAAAAQAAMAAAAlABoAAAAQAAQAAAAmABoAAAAAAAAAAAAnABoAAAAAAAEAAAAmABkAAAAAAAIAAAAlABoAAAAAAAMAAAAkABgAAAAAAAQAAAAmABoAAAAAAAUAAAAmABsAAAAAAAYAAAAnABoAAAAAAAcAAAAkABgAAAAAAAgAAAAnABoAAAAAAAkAAAAmABsAAAAAAAoAAAAnABoAAAAAAAsAAAAlABoAAAAAAAwAAAAmABoAAAAAAA0AAAAlABoAAAAAAA4AAAAmABkAAAAAAA8AAAAmABoAAAAAABAAAAAmABsAAAAAABEAAAAmABsAAAAAABIAAAAlABoAAAAAABMAAAAlABoAAAABAAAAAAAmABsAAAABAAEAAAAmABsAAAABAAIAAAAmABkAAAABAAMAAAAmABsAAAABAAQAAAAkABgAAAABAAUAAAAnABoAAAABAAYAAAAkABgAAAABAAcAAAAmABsAAAABAAgAAAAmABsAAAABAAkAAAAmABsAAAABAAoAAAAmABkAAAABAAsAAAAmABsAAAABAAwAAAAnABoAAAABAA0AAAAmABoAAAABAA4AAAAmABkAAAABAA8AAAAlABoAAAABABAAAAAmABkAAAABABEAAAAnABoAAAABABIAAAAkABgAAAABABMAAAAmABsAAAACAAAAAAAnABoAAAACAAEAAAAlABoAAAACABIAAAAlABoAAAACABMAAAAmABkAAAADAAAAAAAlABoAAAADAAEAAAAmABsAAAADABIAAAAkABgAAAAEAAAAAAAnABoAAAAEAAEAAAAkABgAAAAEABIAAgAmABoAAAAEABMAAgAmABoAAAAFAAAAAAAmABkAAAAFAAEAAAAmABsAAAAFABIAAgAmABoAAAAFABMAAAAmABkAAAAGAAAAAAAmABsAAAAGAAEAAAAmABsAAAAGABIAAgAmABoAAAAGABMAAgAmABoAAAAHAAAAAAAnABoAAAAHAAEAAAAnABoAAAAHABIAAAAmABoAAAAHABMAAgAmABoAAAAIAAAAAAAkABgAAAAIAAEAAAAmABoAAAAIABIAAAAmABsAAAAIABMAAAAlABoAAAAJAAAAAAAmABkAAAAJAAEAAAAlABoAAAAJABIAAAAmABoAAAAJABMAAAAmABkAAAAKAAAAAAAmABoAAAAKAAEAAAAnABoAAAAKAAIAAAAkABgAAAAKAAMAAAAnABoAAAAKAAQAAAAmABkAAAAKAAUAAAAnABoAAAAKAAYAAAAkABgAAAAKAAcAAAAnABoAAAAKAAgAAAAkABgAAAAKAAkAAAAkABgAAAAKAAoAAAAkABgAAAAKAAsAAAAkABgAAAAKAAwAAAAmABsAAAAKAA0AAAAmABsAAAAKAA4AAAAkABgAAAAKAA8AAAAmABoAAAAKABAAAAAmABkAAAAKABEAAAAmABkAAAAKABIAAAAlABoAAAAKABMAAAAmABoAAAALAAAAAAAmABkAAAALAAEAAAAnABoAAAALAAIAAAAkABgAAAALAAMAAAAmABkAAAALAAQAAAAlABoAAAALAAUAAAAmABkAAAALAAYAAAAkABgAAAALAAcAAAAmABkAAAALAAgAAAAmABoAAAALAAkAAAAmABoAAAALAAoAAAAnABoAAAALAAsAAAAnABoAAAALAAwAAAAnABoAAAALAA0AAAAnABoAAAALAA4AAAAmABoAAAALAA8AAAAkABgAAAALABAAAAAlABoAAAALABEAAAAmABoAAAALABIAAAAmABkAAAALABMAAAAlABoAAAAMAAAAAAAmABkAAAAMAAYAAAAmABsAAAAMAAcAAAAkABgAAAAMAAgAAAAlABoAAAAMAAkAAAAmABsAAAAMAAoAAAAmABkAAAAMAAsAAAAkABgAAAAMAAwAAAAmABkAAAAMAA0AAAAmABsAAAAMAA4AAAAmABsAAAAMAA8AAAAkABgAAAAMABAAAAAmABkAAAAMABEAAAAmABoAAAAMABIAAAAmABsAAAAMABMAAgAmABoAAAANAAAAAAAmABsAAAANAAYAAAAlABoAAAANAAcAAAAmABoAAAANAAgAAAAmABoAAAANAAkAAAAmABkAAAANAAoAAAAmABsAAAANAAsAAAAmABsAAAANAAwAAAAmABsAAAANAA0AAAAlABoAAAANAA4AAAAlABoAAAANAA8AAAAmABoAAAANABAAAAAmABsAAAANABEAAAAmABoAAAANABIAAAAlABoAAAANABMAAAAmABoAAAAOAAAAAAAmABoAAAAOAAYAAAAkABgAAAAOAAcAAAAnABoAAAAOAAgAAAAnABoAAAAOAAkAAAAmABsAAAAOAAoAAAAmABoAAAAOAAsAAAAmABoAAAAOAAwAAAAnABoAAAAOAA0AAAAmABkAAAAOAA4AAAAmABoAAAAOAA8AAAAlABoAAAAOABAAAAAmABoAAAAOABEAAAAmABkAAAAOABIAAgAmABoAAAAOABMAAgAmABoAAAAPAAAAAAAmABkAAAAPAAYAAAAlABoAAAAPAAcAAAAmABsAAAAPAAgAAAAnABoAAAAPAAkAAAAmABkAAAAPAAoAAAAmABkAAAAPAAsAAAAmABsAAAAPAAwAAAAmABkAAAAPAA0AAAAlABoAAAAPAA4AAAAnABoAAAAPAA8AAAAnABoAAAAPABAAAAAmABsAAAAPABEAAAAmABoAAAAPABIAAAAmABoAAAAPABMAAgAmABoAAAAQAAAAAAAmABoAAAAQAAYAAAAkABgAAAAQAAcAAAAkABgAAAAQAAgAAAAmABsAAAAQAAkAAAAmABsAAAAQAAoAAAAkABgAAAAQAAsAAAAmABsAAAAQAAwAAAAmABoAAAAQAA0AAAAmABsAAAAQAA4AAAAmABkAAAAQAA8AAAAkABgAAAAQABAAAAAkABgAAAAQABEAAAAnABoAAAAQABIAAAAkABgAAAAQABMAAgAmABoAAAARAAAAAAAmABkAAAARAAYAAAAlABoAAAARAAcAAAAmABkAAAARAAgAAAAnABoAAAARAAkAAAAmABoAAAARAAoAAAAkABgAAAARAAsAAAAkABgAAAARAAwAAAAmABsAAAARAA0AAAAnABoAAAARAA4AAAAmABoAAAARAA8AAAAlABoAAAARABAAAAAmABkAAAARABEAAAAnABoAAAARABIAAAAkABgAAAARABMAAAAmABkAAAASAAAAAAAnABoAAAASAAEAAAAkABgAAAASAAIAAAAmABoAAAASAAMAAAAkABgAAAASAAQAAAAmABsAAAASAAUAAAAlABoAAAASAAYAAAAmABsAAAASAAcAAAAmABsAAAASAAgAAAAlABoAAAASAAkAAAAmABkAAAASAAoAAAAkABgAAAASAAsAAAAlABoAAAASAAwAAAAlABoAAAASAA0AAAAlABoAAAASAA4AAAAkABgAAAASAA8AAAAlABoAAAASABAAAAAmABkAAAASABEAAAAnABoAAAASABIAAAAmABoAAAASABMAAAAmABoAAAATAAAAAAAmABoAAAATAAEAAAAmABoAAAATAAIAAAAmABsAAAATAAMAAAAmABkAAAATAAQAAAAnABoAAAATAAUAAAAnABoAAAATAAYAAAAmABoAAAATAAcAAAAmABkAAAATAAgAAAAmABsAAAATAAkAAAAlABoAAAATAAoAAAAmABsAAAATAAsAAAAnABoAAAATAAwAAAAkABgAAAATAA0AAAAlABoAAAATAA4AAAAmABkAAAATAA8AAAAkABgAAAATABAAAAAmABsAAAATABEAAAAlABoAAAATABIAAAAmABsAAAATABMAAAAkABgAAAAUAAAAAAAmABoAAAAUAAEAAAAmABoAAAAUAAIAAAAmABkAAAAUAAMAAAAlABoAAAAUAAQAAAAkABgAAAAUAAUAAAAlABoAAAAUAAYAAAAkABgAAAAUAAcAAAAnABoAAAAUAAgAAAAmABoAAAAUAAkAAAAnABoAAAAUAAoAAAAmABsAAAAUAAsAAAAlABoAAAAUAAwAAAAnABoAAAAUAA0AAAAmABoAAAAUAA4AAAAmABkAAAAUAA8AAAAlABoAAAAUABAAAAAmABkAAAAUABEAAAAkABgAAAAUABIAAAAmABoAAAAUABMAAAAkABgAAAAVAAAAAAAmABkAAAAVAAEAAAAnABoAAAAVAAIAAAAkABgAAAAVAAMAAAAlABoAAAAVAAQAAAAkABgAAAAVAAUAAAAmABoAAAAVAAYAAAAmABoAAAAVAAcAAAAmABsAAAAVAAgAAAAmABsAAAAVAAkAAAAmABoAAAAVAAoAAAAlABoAAAAVAAsAAAAmABoAAAAVAAwAAAAlABoAAAAVAA0AAAAnABoAAAAVAA4AAAAlABoAAAAVAA8AAAAkABgAAAAVABAAAAAmABkAAAAVABEAAAAlABoAAAAVABIAAAAmABsAAAAVABMAAAAmABsAAAAWAAAAAAAnABoAAAAWAAEAAAAkABgAAAAWAAIAAAAlABoAAAAWAAMAAAAmABsAAAAWAAQAAAAmABsAAAAWAAUAAAAnABoAAAAWAAYAAAAmABoAAAAWAAcAAAAnABoAAAAWAAgAAAAlABoAAAAWAAkAAAAmABsAAAAWAAoAAAAmABoAAAAWAAsAAAAmABkAAAAWAAwAAAAlABoAAAAWAA0AAAAnABoAAAAWAA4AAAAnABoAAAAWAA8AAAAmABsAAAAWABAAAAAmABkAAAAWABEAAAAlABoAAAAWABIAAAAmABkAAAAWABMAAAAmABkAAAAXAAAAAAAmABsAAAAXAAEAAAAmABkAAAAXAAIAAAAmABsAAAAXAAMAAAAlABoAAAAXAAQAAAAnABoAAAAXAAUAAAAnABoAAAAXAAYAAAAmABkAAAAXAAcAAAAnABoAAAAXAAgAAAAmABoAAAAXAAkAAAAmABsAAAAXAAoAAAAmABsAAAAXAAsAAAAlABoAAAAXAAwAAAAnABoAAAAXAA0AAAAkABgAAAAXAA4AAAAnABoAAAAXAA8AAAAlABoAAAAXABAAAAAmABoAAAAXABEAAAAmABsAAAAXABIAAAAmABsAAAAXABMAAAAkABgAAAAYAAAAAAAkABgAAAAYAAEAAAAmABsAAAAYAAIAAAAkABgAAAAYAAMAAAAnABoAAAAYAAQAAAAmABkAAAAYAAUAAAAmABkAAAAYAAYAAAAlABoAAAAYAAcAAAAlABoAAAAYAAgAAAAmABsAAAAYAAkAAAAmABsAAAAYAAoAAAAnABoAAAAYAAsAAAAnABoAAAAYAAwAAAAmABoAAAAYAA0AAAAnABoAAAAYAA4AAAAmABoAAAAYAA8AAAAmABsAAAAYABAAAAAlABoAAAAYABEAAAAkABgAAAAYABIAAAAmABkAAAAYABMAAAAnABoAAAAZAAAAAAAmABkAAAAZAAEAAAAmABkAAAAZAAIAAAAnABoAAAAZAAMAAAAmABkAAAAZAAQAAAAmABkAAAAZAAUAAAAnABoAAAAZAAYAAAAnABoAAAAZAAcAAAAmABsAAAAZAAgAAAAmABsAAAAZAAkAAAAmABoAAAAZAAoAAAAmABoAAAAZAAsAAAAmABkAAAAZAAwAAAAlABoAAAAZAA0AAAAlABoAAAAZAA4AAAAmABkAAAAZAA8AAAAkABgAAAAZABAAAAAlABoAAAAZABEAAAAkABgAAAAZABIAAAAmABsAAAAZABMAAAAkABgAAAAaAAAAAAAmABoAAAAaAAEAAAAmABkAAAAaAAIAAAAnABoAAAAaAAMAAAAmABsAAAAaAAQAAAAmABkAAAAaAAUAAAAnABoAAAAaAAYAAAAnABoAAAAaAAcAAAAmABsAAAAaAAgAAAAmABsAAAAaAAkAAAAmABsAAAAaAAoAAAAkABgAAAAaAAsAAAAmABoAAAAaAAwAAAAmABsAAAAaAA0AAAAmABsAAAAaAA4AAAAkABgAAAAaAA8AAAAmABsAAAAaABAAAAAmABsAAAAaABEAAAAnABoAAAAaABIAAAAmABsAAAAaABMAAAAnABoAAAAbAAAAAAAlABoAAAAbAAEAAAAmABsAAAAbAAIAAAAnABoAAAAbAAMAAAAlABoAAAAbAAQAAAAmABkAAAAbAAUAAAAnABoAAAAbAAYAAAAmABoAAAAbAAcAAAAkABgAAAAbAAgAAAAmABoAAAAbAAkAAAAkABgAAAAbAAoAAAAkABgAAAAbAAsAAAAkABgAAAAbAAwAAAAkABgAAAAbAA0AAAAlABoAAAAbAA4AAAAkABgAAAAbAA8AAAAmABsAAAAbABAAAAAlABoAAAAbABEAAAAnABoAAAAbABIAAAAmABkAAAAbABMAAAAlABoAAAAcAAAAAAAnABoAAAAcAAEAAAAlABoAAAAcAAIAAAAmABoAAAAcAAMAAAAkABgAAAAcAAQAAAAkABgAAAAcAAUAAAAkABgAAAAcAAYAAAAkABgAAAAcAAcAAAAmABkAAAAcAAgAAAAkABgAAAAcAAkAAAAlABoAAAAcAAoAAAAmABsAAAAcAAsAAAAlABoAAAAcAAwAAAAkABgAAAAcAA0AAAAmABoAAAAcAA4AAAAnABoAAAAcAA8AAAAmABsAAAAcABAAAAAkABgAAAAcABEAAAAmABoAAAAcABIAAAAmABsAAAAcABMAAAAlABoAAAAdAAAAAAAlABoAAAAdAAEAAAAlABoAAAAdAAIAAAAmABoAAAAdAAMAAAAnABoAAAAdAAQAAAAlABoAAAAdAAUAAAAmABsAAAAdAAYAAAAnABoAAAAdAAcAAAAlABoAAAAdAAgAAAAnABoAAAAdAAkAAAAnABoAAAAdAAoAAAAmABsAAAAdAAsAAAAlABoAAAAdAAwAAAAkABgAAAAdAA0AAAAmABsAAAAdAA4AAAAkABgAAAAdAA8AAAAnABoAAAAdABAAAAAmABkAAAAdABEAAAAmABoAAAAdABIAAAAmABsAAAAdABMAAAAmABsAAAAeAAAAAAAlABoAAAAeAAEAAAAmABkAAAAeAAIAAAAkABgAAAAeAAMAAAAnABoAAAAeAAQAAAAmABsAAAAeAAUAAAAlABoAAAAeAAYAAAAmABkAAAAeAAcAAAAnABoAAAAeAAgAAAAlABoAAAAeAAkAAAAlABoAAAAeAAoAAAAmABkAAAAeAAsAAAAmABsAAAAeAAwAAAAmABkAAAAeAA0AAAAmABsAAAAeAA4AAAAnABoAAAAeAA8AAAAkABgAAAAeABAAAAAmABkAAAAeABEAAAAmABsAAAAeABIAAAAlABoAAAAeABMAAAAlABoAAAAfAAAAAAAnABoAAAAfAAEAAAAnABoAAAAfAAIAAAAkABgAAAAfAAMAAAAkABgAAAAfAAQAAAAnABoAAAAfAAUAAAAkABgAAAAfAAYAAAAmABkAAAAfAAcAAAAmABkAAAAfAAgAAAAlABoAAAAfAAkAAAAmABsAAAAfAAoAAAAmABoAAAAfAAsAAAAlABoAAAAfAAwAAAAmABkAAAAfAA0AAAAlABoAAAAfAA4AAAAkABgAAAAfAA8AAAAmABsAAAAfABAAAAAkABgAAAAfABEAAAAmABoAAAAfABIAAAAmABsAAAAfABMAAAAkABgAAAAgAAAAAAAmABoAAAAgAAEAAAAkABgAAAAgAAIAAAAkABgAAAAgAAMAAAAmABkAAAAgAAQAAAAlABoAAAAgAAUAAAAmABsAAAAgAAYAAAAkABgAAAAgAAcAAAAkABgAAAAgAAgAAAAmABoAAAAgAAkAAAAmABkAAAAgAAoAAAAkABgAAAAgAAsAAAAlABoAAAAgAAwAAAAlABoAAAAgAA0AAAAmABoAAAAgAA4AAAAmABsAAAAgAA8AAAAmABoAAAAgABAAAAAmABkAAAAgABEAAAAmABoAAAAgABIAAAAmABoAAAAgABMAAAAkABgAAAAhAAAAAAAmABkAAAAhAAEAAAAlABoAAAAhAAIAAAAmABsAAAAhAAMAAAAkABgAAAAhAAQAAAAlABoAAAAhAAUAAAAlABoAAAAhAAYAAAAkABgAAAAhAAcAAAAmABsAAAAhAAgAAAAkABgAAAAhAAkAAAAmABoAAAAhAAoAAAAmABkAAAAhAAsAAAAmABoAAAAhAAwAAAAmABkAAAAhAA0AAAAmABsAAAAhAA4AAAAnABoAAAAhAA8AAAAmABoAAAAhABAAAAAmABoAAAAhABEAAAAmABsAAAAhABIAAAAlABoAAAAhABMAAAAkABgAAAAAABQAAgAmABsAAAAAABUAAgAmABsAAAABABQAAgAmABoAAAABABYAAgAmABoAAAACABQAAgAmABoAAAADABUAAgAmABsAAAADABYAAgAlABoAAAAEABQAAgAmABoAAAAEABUAAgAnABoAAAAFABQAAgAmABoAAAAGABQAAgAmABoAAAAGABUAAgAlABoAAAAGABYAAgAnABoAAAAHABQAAgAmABsAAAAHABUAAgAnABoAAAAIABUAAgAmABsAAAAJABYAAgAmABoAAAAKABQAAgAmABoAAAAKABUAAgAmABoAAAAKABYAAgAmABkAAAALABYAAgAmABoAAAAMABYAAgAmABkAAAANABQAAgAlABoAAAANABUAAgAmABoAAAANABYAAgAmABsAAAAOABQAAgAlABoAAAAOABUAAgAmABkAAAAPABUAAgAmABoAAAAPABYAAgAmABkAAAAQABUAAgAmABoAAAAQABYAAgAmABoAAAARABQAAgAmABoAAAARABUAAgAnABoAAAARABYAAgAnABoAAAASABQAAgAmABoAAAASABUAAgAmABoAAAATABUAAgAlABoAAAATABYAAgAlABoAAAAUABUAAgAmABoAAAAVABQAAgAlABoAAAAVABYAAgAnABoAAAAWABQAAgAnABoAAAAWABUAAgAlABoAAAAWABYAAgAnABoAAAAXABQAAgAmABoAAAAXABUAAgAmABoAAAAYABQAAgAmABoAAAAYABUAAgAlABoAAAAYABYAAgAlABoAAAAZABQAAgAmABoAAAAZABUAAgAmABsAAAAZABYAAgAnABoAAAAaABQAAgAnABoAAAAaABUAAgAmABsAAAAaABYAAgAmABsAAAAbABQAAgAmABsAAAAbABUAAgAmABoAAAAbABYAAgAmABoAAAAcABUAAgAmABoAAAAcABYAAgAlABoAAAAdABQAAgAmABoAAAAdABUAAgAmABoAAAAeABQAAgAlABoAAAAeABUAAgAlABoAAAAfABQAAgAmABsAAAAfABUAAgAmABkAAAAgABQAAgAmABoAAAAgABUAAgAlABoAAAAhABUAAgAmABsAAAAhABYAAgAmABsAAAAAABYAAgAmABoAAAABABUAAgAmABoAAAAEABYAAgAmABoAAAAFABUAAgAlABoAAAAFABYAAgAmABsAAAAHABYAAgAmABoAAAAIABQAAgAmABoAAAAIABYAAgAmABoAAAAJABQAAgAlABoAAAAJABUAAgAmABkAAAAPABQAAgAmABoAAAAQABQAAgAnABoAAAASABYAAgAmABkAAAATABQAAgAmABoAAAAUABQAAgAmABoAAAAUABYAAgAnABoAAAAVABUAAgAmABoAAAAXABYAAgAnABoAAAAcABQAAgAnABoAAAAdABYAAgAnABoAAAAeABYAAgAmABoAAAAgABYAAgAmABsAAAAhABQAAgAmABoAAAACABYAAgAmABkAAAAOABYAAgAmABkAAAAfABYAAgAlABoAAAACABUAAgAmABsAAAADABMAAgAmABoAAAADABQAAgAmABoAAAALABUAAgAmABoAAAAMABUAAgAmABkAAAALABQAAgAmABoAAAAMABQAAgAmABsAAAA=")
tile_set = ExtResource("9_rxj55")

[node name="game" type="TileMapLayer" parent="."]
visible = false
z_index = 20
position = Vector2(206, 36)
tile_map_data = PackedByteArray("AAACAAIAAAAhABoAAAACAAMAAAAhABoAAAACAAQAAAAgABoAAAACAAUAAAAiABoAAAACAAYAAAAhABkAAAACAAcAAAAhABoAAAACAAgAAAAgABoAAAACAAkAAAAhABoAAAACAAoAAAAhABkAAAACAAsAAAAhABoAAAACAAwAAAAiABoAAAACAA0AAAAhABkAAAACAA4AAAAiABoAAAACAA8AAAAgABoAAAACABAAAAAhABkAAAACABEAAAAhABkAAAADAAIAAAAhABoAAAADAAMAAAAiABoAAAADAAQAAAAhABkAAAADAAUAAAAiABoAAAADAAYAAAAhABoAAAADAAcAAAAhABoAAAADAAgAAAAhABoAAAADAAkAAAAiABoAAAADAAoAAAAiABoAAAADAAsAAAAhABkAAAADAAwAAAAgABoAAAADAA0AAAAhABoAAAADAA4AAAAhABoAAAADAA8AAAAhABoAAAADABAAAAAiABoAAAADABEAAAAgABoAAAAEAAIAAAAgABoAAAAEAAMAAAAhABoAAAAEAAQAAAAhABoAAAAEAAUAAAAgABoAAAAEAAYAAAAhABkAAAAEAAcAAAAhABoAAAAEAAgAAAAhABoAAAAEAAkAAAAhABoAAAAEAAoAAAAhABoAAAAEAAsAAAAgABoAAAAEAAwAAAAhABoAAAAEAA0AAAAhABoAAAAEAA4AAAAhABoAAAAEAA8AAAAgABoAAAAEABAAAAAhABkAAAAEABEAAAAiABoAAAAFAAIAAAAiABoAAAAFAAMAAAAhABoAAAAFAAQAAAAhABoAAAAFAAUAAAAhABkAAAAFAAYAAAAiABoAAAAFAAcAAAAgABoAAAAFAAgAAAAhABkAAAAFAAkAAAAhABoAAAAFAAoAAAAhABoAAAAFAAsAAAAhABoAAAAFAAwAAAAhABoAAAAFAA0AAAAgABoAAAAFAA4AAAAhABoAAAAFAA8AAAAhABoAAAAFABAAAAAhABoAAAAFABEAAAAhABoAAAAGAAIAAAAgABoAAAAGAAMAAAAiABoAAAAGAAQAAAAhABoAAAAGAAUAAAAhABoAAAAGAAYAAAAgABoAAAAGAAcAAAAhABoAAAAGAAgAAAAhABoAAAAGAAkAAAAhABoAAAAGAAoAAAAiABoAAAAGAAsAAAAhABkAAAAGAAwAAAAiABoAAAAGAA0AAAAhABkAAAAGAA4AAAAgABoAAAAGAA8AAAAgABoAAAAGABAAAAAhABkAAAAGABEAAAAhABoAAAAHAAIAAAAhABkAAAAHAAMAAAAhABoAAAAHAAQAAAAhABoAAAAHAAUAAAAhABoAAAAHAAYAAAAhABoAAAAHAAcAAAAiABoAAAAHAAgAAAAhABoAAAAHAAkAAAAhABoAAAAHAAoAAAAhABoAAAAHAAsAAAAhABkAAAAHAAwAAAAhABkAAAAHAA0AAAAhABoAAAAHAA4AAAAhABkAAAAHAA8AAAAhABoAAAAHABAAAAAhABoAAAAHABEAAAAgABoAAAAIAAIAAAAhABkAAAAIAAMAAAAgABoAAAAIAAQAAAAhABoAAAAIAAUAAAAhABoAAAAIAAYAAAAgABoAAAAIAAcAAAAgABoAAAAIAAgAAAAhABkAAAAIAAkAAAAgABoAAAAIAAoAAAAhABoAAAAIAAsAAAAhABoAAAAIAAwAAAAgABoAAAAIAA0AAAAhABkAAAAIAA4AAAAgABoAAAAIAA8AAAAhABkAAAAIABAAAAAhABkAAAAIABEAAAAgABoAAAAJAAIAAAAhABkAAAAJAAMAAAAgABoAAAAJAAQAAAAhABoAAAAJAAUAAAAiABoAAAAJAAYAAAAhABoAAAAJAAcAAAAhABkAAAAJAAgAAAAgABoAAAAJAAkAAAAiABoAAAAJAAoAAAAhABkAAAAJAAsAAAAiABoAAAAJAAwAAAAgABoAAAAJAA0AAAAhABkAAAAJAA4AAAAhABkAAAAJAA8AAAAhABkAAAAJABAAAAAiABoAAAAJABEAAAAgABoAAAA=")
tile_set = ExtResource("9_rxj55")

[node name="CellTile" type="TileMapLayer" parent="."]
visible = false
position = Vector2(14, 75)
tile_set = ExtResource("9_rxj55")

[node name="Board" type="Node2D" parent="."]
visible = false
position = Vector2(238, 68)

[node name="TileMapLayer" type="TileMapLayer" parent="Board"]
visible = false
z_index = 30
tile_set = ExtResource("9_rxj55")

[node name="PieceContainer" type="Node2D" parent="."]
visible = false
position = Vector2(238, 68)

[node name="TileMapLayer" type="TileMapLayer" parent="PieceContainer"]
visible = false
z_index = 30
tile_set = ExtResource("9_rxj55")

[node name="NextPieceContainer" type="Node2D" parent="."]
visible = false
position = Vector2(425, 82)

[node name="TileMapLayer" type="TileMapLayer" parent="NextPieceContainer"]
visible = false
z_index = 30
tile_set = ExtResource("9_rxj55")

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
z_index = 500
offset_left = 138.0
offset_top = 107.0
offset_right = 421.0
offset_bottom = 265.0
theme_override_styles/panel = SubResource("StyleBoxTexture_2jy88")

[node name="FinalScoreLabel" type="Label" parent="GameOverPanel"]
z_index = 50
layout_mode = 0
offset_left = 2.0
offset_top = 61.0
offset_right = 283.0
offset_bottom = 85.0
theme_override_colors/font_color = Color(0.35262072, 0, 0.00086221425, 1)
theme_override_fonts/font = ExtResource("12_50l43")
theme_override_font_sizes/font_size = 8
text = "Restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalScoreLabel2" type="Label" parent="GameOverPanel"]
z_index = 50
layout_mode = 0
offset_left = -2.0
offset_top = 24.0
offset_right = 287.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0.35262072, 0, 0.00086221425, 1)
theme_override_fonts/font = ExtResource("12_50l43")
theme_override_font_sizes/font_size = 8
text = "Mini Game finish"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="GameOverPanel"]
layout_mode = 0
offset_left = -4.0
offset_top = 16.0
offset_right = 287.0
offset_bottom = 47.0
texture = ExtResource("5_2n73v")
patch_margin_left = 29
patch_margin_top = 12
patch_margin_right = 29
patch_margin_bottom = 11

[node name="NinePatchRect2" type="NinePatchRect" parent="GameOverPanel"]
layout_mode = 0
offset_left = 12.0
offset_top = 51.0
offset_right = 270.0
offset_bottom = 145.0
texture = ExtResource("13_10lva")
patch_margin_left = 38
patch_margin_top = 9
patch_margin_right = 39
patch_margin_bottom = 10

[node name="NinePatchRect3" type="NinePatchRect" parent="GameOverPanel"]
layout_mode = 0
offset_left = 122.0
offset_top = 132.0
offset_right = 256.0
offset_bottom = 154.0
texture = ExtResource("14_u7uge")
patch_margin_left = 32
patch_margin_top = 11
patch_margin_right = 32
patch_margin_bottom = 11

[node name="RestartButton" type="Button" parent="GameOverPanel"]
layout_mode = 0
offset_left = 157.0
offset_top = 135.0
offset_right = 221.0
offset_bottom = 151.0
theme = ExtResource("15_rsen0")
theme_override_colors/font_color = Color(0.3719114, 0.026657691, 0.018725365, 1)
theme_override_fonts/font = ExtResource("12_50l43")
theme_override_font_sizes/font_size = 8
text = "Restart"
flat = true
icon_alignment = 1

[node name="Button" type="Button" parent="."]
offset_top = 328.0
offset_right = 30.0
offset_bottom = 360.0
theme = ExtResource("15_rsen0")
theme_override_fonts/font = ExtResource("12_50l43")
theme_override_icons/icon = SubResource("AtlasTexture_bi24v")
flat = true

[node name="waiting_chess" type="Node2D" parent="."]
position = Vector2(36, 89)

[node name="GameBoard" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="GameBoard"]
z_index = 15
offset_left = 237.0
offset_top = 66.0
offset_right = 509.0
offset_bottom = 320.0

[node name="GameElements" type="Node2D" parent="GameBoard"]
z_index = 20
z_as_relative = false
position = Vector2(245, 71)

[node name="UIContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 398.0
offset_top = 104.0
offset_right = 438.0
offset_bottom = 144.0

[node name="HighScoreLabel" type="Label" parent="UIContainer"]
layout_mode = 0
offset_left = -235.0
offset_top = 223.0
offset_right = -195.0
offset_bottom = 263.0

[node name="ScoreLabel" type="Label" parent="UIContainer"]
z_index = 50
layout_mode = 0
offset_left = 8.0
offset_top = 229.0
offset_right = 86.0
offset_bottom = 252.0
theme_override_colors/font_color = Color(0.2737397, 0.14021519, 1.2032687e-07, 1)
theme_override_fonts/font = ExtResource("10_xuaa6")
theme_override_font_sizes/font_size = 8
text = "Score: 1000"
vertical_alignment = 1

[node name="StartButton" type="Button" parent="UIContainer"]
layout_mode = 0
offset_left = -320.0
offset_top = 221.0
offset_right = -265.0
offset_bottom = 252.0
text = "startq"

[node name="GameTimer" type="Timer" parent="."]

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
